<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="viewModel"
            type="com.roeyc.askall.viewmodels.QuestionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/user_info_title"
            style="@style/Widget.AskAll.TextView.UserInfoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="298dp"
            android:text="@string/user_info_title"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_info_title"
            app:tabPaddingEnd="10dp"
            app:tabPaddingStart="10dp">


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_column="1"
                    android:text="@string/user_info_name" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="151dp"
                    android:text="@{viewModel.questionData.name}"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#234568"
                    android:textStyle="bold|italic"
                    tools:text="user name" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:text="@string/user_info_gender" />

                <TextView
                    android:id="@+id/user_sex"
                    android:layout_width="wrap_content"
                    android:text="@{viewModel.questionData.sex}"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#234568"
                    android:textStyle="bold|italic"
                    tools:text="user sex" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:text="@string/user_info_age" />

                <TextView
                    android:id="@+id/user_age"
                    android:layout_width="wrap_content"
                    android:text="@{Integer.toString(viewModel.questionData.age)}"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#234568"
                    android:textStyle="bold|italic"
                    tools:text="user age" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>