<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

<!-- using navigation component https://developer.android.com/guide/navigation/navigation-getting-started-->
<!-- working good between fragments but from activity to fragment need to check-->
<!--        <androidx.fragment.app.FragmentContainerView-->
<!--            android:id="@+id/nav_host_fragment"-->
<!--            android:name="androidx.navigation.fragment.NavHostFragment"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            app:defaultNavHost="true"-->
<!--            app:navGraph="@navigation/nav_graph" />-->

        <LinearLayout
            android:id="@+id/back_drop_menu"
            style="@style/Widget.AskAll.Backdrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="100dp">
            <include layout="@layout/menu_backdrop" />

        </LinearLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/app_bar"
                style="@style/Widget.AskAll.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_menu_black">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/main_screen_title"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/grid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="56dp"
    android:background="@color/productGridBackgroundColor"
    android:elevation="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SIGN OUT"
        app:layout_constraintTop_toBottomOf="@+id/signin_button" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SIGN IN"
        app:layout_constraintTop_toBottomOf="@+id/hello" />

    <ImageButton
        android:id="@+id/see_questions_button"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_app_icon_24"
        app:layout_constraintEnd_toStartOf="@+id/divider_1"
        app:layout_constraintTop_toTopOf="@+id/divider_1"
        app:layout_constraintBottom_toBottomOf="@+id/divider_1"/>

    <TextView
        android:id="@+id/stat_detail_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_questions"
        android:textColor="#777"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/see_questions_button"
        app:layout_constraintStart_toStartOf="@+id/see_questions_button"
        app:layout_constraintTop_toBottomOf="@+id/see_questions_button" />


    <View
        android:id="@+id/divider_1"
        android:layout_width="5dp"
        android:layout_height="90dp"
        android:background="#ccc"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <ImageButton
        android:id="@+id/ask_something_button"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_ask_something_24"
        app:layout_constraintTop_toTopOf="@+id/see_questions_button"
        app:layout_constraintStart_toEndOf="@+id/divider_1" />

    <TextView
        android:id="@+id/stat_detail_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/ask_something"
        android:textColor="#777"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/ask_something_button"
        app:layout_constraintStart_toStartOf="@+id/ask_something_button"
        app:layout_constraintTop_toBottomOf="@+id/ask_something_button" />


</androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>